Explicitly open java.land and java.util for Gradle test task used in custom tasks testing